--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
-@import url("/css/button.css");
+/* @import url("/css/buttons.css");
 @import url("/css/hero.css");
 @import url("/css/email.css");
 @import url("/css/clients.css");
 @import url("/css/contact.css");
 @import url("/css/appfeatures.css");
 @import url("/css/featuresmoney.css");
-@import url("/css/contact-js.css");
+@import url("/css/contact-js.css"); */
 
 
 :root {
