--- a/src/assets/css/email.css
+++ b/src/assets/css/email.css
@@ -30,6 +30,7 @@
     border: 0;
     font-size: 1rem;
     border-radius: 0 0.5em 0.5em 0;
+    height: 2.73rem;
   }
 
   .form-input {
@@ -37,11 +38,14 @@
     font-size: 1rem;
     padding: 0.3em;
     border-radius: 0.5em 0 0 0.5em;
+    height: 2.73rem;
   }
 
   .input-group {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-items: center;
+    align-items: center;
   }
 
   .email {
